--- a/MenuExemples/CSS/RadioButton.css
+++ b/MenuExemples/CSS/RadioButton.css
@@ -1,4 +1,5 @@
-﻿input[type=radio].css-checkbox {
+﻿/* Tous les input contenus dans un un élément qui possède la classe .css-checkbox */
+.css-checkbox input[type=radio] {
     position: absolute;
     z-index: -1000;
     left: -1000px;
@@ -11,7 +12,8 @@
     border: 0;
 }
 
-input[type=radio].css-checkbox + label.css-label {
+/* Tous les label qui suivent un input de type radio, contenus dans un élément qui possède la classe .css-checkbox */
+.css-checkbox input[type=radio] + label {
     padding-left: 20px;
     height: 15px;
     display: inline-block;
@@ -23,11 +25,13 @@ input[type=radio].css-checkbox + label.css-label {
     cursor: pointer;
 }
 
-input[type=radio].css-checkbox:checked + label.css-label {
+/* Tous les label checked qui suivent un input de type radio, contenus dans un élément qui possède la classe .css-checkbox */
+.css-checkbox input[type=radio]:checked + label {
     background-position: 0 -15px;
 }
 
-label.css-label {
+/* Tous les label contenus dans un élément qui possède la classe .css-checkbox */
+.css-checkbox label {
     background-image: url(http://csscheckbox.com/checkboxes/u/csscheckbox_da83f5ec4bfb0d37395bf0b9a7a44321.png);
     -webkit-touch-callout: none;
     -webkit-user-select: none;
