--- a/MenuExemples/Resources/CSS/Gallery.css
+++ b/MenuExemples/Resources/CSS/Gallery.css
@@ -19,6 +19,7 @@ html, body, form {
 *****************************************************************************************/
 .wrapper {
     overflow: hidden;
+    margin: 10px;
 }
 
 .box {
@@ -26,26 +27,55 @@ html, body, form {
     background: #00F;
     float: left;
     margin: 1px;
+    width: 20%;
+    padding-bottom: 20%;
 }
 
 .innerContent {
     position: absolute;
     background: #66F;
-    width: 100%;
-    height: 100%;
+    left: 10px;
+    right: 10px;
+    top: 10px;
+    bottom: 10px;
+    overflow: hidden;
 }
 
-.smallBox {
-    width: 10%;
-    padding-bottom: 10%;
+    .innerContent img {
+        width: 100%;
+    }
+
+/****************************************************************************************
+************************************** By media    **************************************
+*****************************************************************************************/
+@media only screen and (max_width: 480px) {
+    /* SmarthPhone view : 1 tile */
+    .Box {
+        width: 100%;
+        padding-bottom: 100%;
+    }
 }
 
-.mediumBox {
-    width: 20%;
-    padding-bottom: 20%;
+@media only screen and (max-width : 650px) and (min-width : 481px) {
+   /* Tablet view: 2 tiles */
+   .box {
+      width: 50%;
+      padding-bottom: 50%;
+   }
 }
 
-.largeBox {
-    width: 30%;
-    padding-bottom: 30%;
+@media only screen and (max-width : 1050px) and (min-width : 651px) {
+   /* Small desktop / ipad view: 3 tiles */
+   .box {
+      width: 33.3%;
+      padding-bottom: 33.3%;
+   }
+}
+
+@media only screen and (max-width : 1290px) and (min-width : 1051px) {
+   /* Medium desktop: 4 tiles */
+   .box {
+      width: 25%;
+      padding-bottom: 25%;
+   }
 }
