--- a/MenuExemples/Resources/CSS/SliderGallery.css
+++ b/MenuExemples/Resources/CSS/SliderGallery.css
@@ -13,6 +13,27 @@
 
 .big{
     position: absolute;
+    top: 900px;
+    left: 20px;
+
+    -webkit-transition: top 1s ease;
+    -moz-transition: top 1s ease;
+    -o-transition: top 1s ease;
+    -ms-transition: top 1s ease;
+    transition: top 1s ease;
+}
+
+.featured{
     top: 260px;
     left: 20px;
+    z-index: -3;
+}
+
+a:hover .thumb{
+    -webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.5);
+}
+a:hover .big{
+    top: 260px;
 }
